Flesh out minipbs and change pbs.cpp to rcc.cpp

--- a/nimrun/CMakeLists.txt
+++ b/nimrun/CMakeLists.txt
@@ -26,8 +26,11 @@ add_executable(nimrun
 	nimrun.cpp
 	ip.cpp
 	ssl.cpp
-	pbs.cpp
+
+	rcc.cpp
 	minipbs.hpp
+	minipbs.cpp
+
 	qpid.cpp
 	nimrun.hpp
 	json.hpp
